Making progress towards refactoring acutal weight updater to prime but running into issues
