# pkg/gen/primeapi/primeoperations/move_task_order/get_prime_entitlements.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package entitlements
+package move_task_order
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the generate command
@@ -29,7 +29,7 @@ func NewGetPrimeEntitlements(ctx *middleware.Context, handler GetPrimeEntitlemen
 	return &GetPrimeEntitlements{Context: ctx, Handler: handler}
 }
 
-/*GetPrimeEntitlements swagger:route GET /move-task-orders/{moveTaskOrderID}/prime-entitlements Entitlements prime getPrimeEntitlements
+/*GetPrimeEntitlements swagger:route GET /move-task-orders/{moveTaskOrderID}/prime-entitlements moveTaskOrder prime getPrimeEntitlements
 
 Gets entitlements for a move order by ID
 
