# pkg/gen/primeapi/primeoperations/move_task_order/get_prime_entitlements_parameters.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package entitlements
+package move_task_order
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
