# pkg/gen/primeapi/primeoperations/move_task_order/get_prime_entitlements_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package entitlements
+package move_task_order
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -10,7 +10,7 @@ import (
 
 	"github.com/go-openapi/runtime"
 
-	ghcmessages "github.com/transcom/mymove/pkg/gen/ghcmessages"
+	primemessages "github.com/transcom/mymove/pkg/gen/primemessages"
 )
 
 // GetPrimeEntitlementsOKCode is the HTTP code returned for type GetPrimeEntitlementsOK
@@ -25,7 +25,7 @@ type GetPrimeEntitlementsOK struct {
 	/*
 	  In: Body
 	*/
-	Payload *ghcmessages.Entitlements `json:"body,omitempty"`
+	Payload *primemessages.Entitlements `json:"body,omitempty"`
 }
 
 // NewGetPrimeEntitlementsOK creates GetPrimeEntitlementsOK with default headers values
@@ -35,13 +35,13 @@ func NewGetPrimeEntitlementsOK() *GetPrimeEntitlementsOK {
 }
 
 // WithPayload adds the payload to the get prime entitlements o k response
-func (o *GetPrimeEntitlementsOK) WithPayload(payload *ghcmessages.Entitlements) *GetPrimeEntitlementsOK {
+func (o *GetPrimeEntitlementsOK) WithPayload(payload *primemessages.Entitlements) *GetPrimeEntitlementsOK {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the get prime entitlements o k response
-func (o *GetPrimeEntitlementsOK) SetPayload(payload *ghcmessages.Entitlements) {
+func (o *GetPrimeEntitlementsOK) SetPayload(payload *primemessages.Entitlements) {
 	o.Payload = payload
 }
 
@@ -69,7 +69,7 @@ type GetPrimeEntitlementsBadRequest struct {
 	/*
 	  In: Body
 	*/
-	Payload *ghcmessages.Error `json:"body,omitempty"`
+	Payload *primemessages.Error `json:"body,omitempty"`
 }
 
 // NewGetPrimeEntitlementsBadRequest creates GetPrimeEntitlementsBadRequest with default headers values
@@ -79,13 +79,13 @@ func NewGetPrimeEntitlementsBadRequest() *GetPrimeEntitlementsBadRequest {
 }
 
 // WithPayload adds the payload to the get prime entitlements bad request response
-func (o *GetPrimeEntitlementsBadRequest) WithPayload(payload *ghcmessages.Error) *GetPrimeEntitlementsBadRequest {
+func (o *GetPrimeEntitlementsBadRequest) WithPayload(payload *primemessages.Error) *GetPrimeEntitlementsBadRequest {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the get prime entitlements bad request response
-func (o *GetPrimeEntitlementsBadRequest) SetPayload(payload *ghcmessages.Error) {
+func (o *GetPrimeEntitlementsBadRequest) SetPayload(payload *primemessages.Error) {
 	o.Payload = payload
 }
 
@@ -113,7 +113,7 @@ type GetPrimeEntitlementsUnauthorized struct {
 	/*
 	  In: Body
 	*/
-	Payload *ghcmessages.Error `json:"body,omitempty"`
+	Payload *primemessages.Error `json:"body,omitempty"`
 }
 
 // NewGetPrimeEntitlementsUnauthorized creates GetPrimeEntitlementsUnauthorized with default headers values
@@ -123,13 +123,13 @@ func NewGetPrimeEntitlementsUnauthorized() *GetPrimeEntitlementsUnauthorized {
 }
 
 // WithPayload adds the payload to the get prime entitlements unauthorized response
-func (o *GetPrimeEntitlementsUnauthorized) WithPayload(payload *ghcmessages.Error) *GetPrimeEntitlementsUnauthorized {
+func (o *GetPrimeEntitlementsUnauthorized) WithPayload(payload *primemessages.Error) *GetPrimeEntitlementsUnauthorized {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the get prime entitlements unauthorized response
-func (o *GetPrimeEntitlementsUnauthorized) SetPayload(payload *ghcmessages.Error) {
+func (o *GetPrimeEntitlementsUnauthorized) SetPayload(payload *primemessages.Error) {
 	o.Payload = payload
 }
 
@@ -157,7 +157,7 @@ type GetPrimeEntitlementsForbidden struct {
 	/*
 	  In: Body
 	*/
-	Payload *ghcmessages.Error `json:"body,omitempty"`
+	Payload *primemessages.Error `json:"body,omitempty"`
 }
 
 // NewGetPrimeEntitlementsForbidden creates GetPrimeEntitlementsForbidden with default headers values
@@ -167,13 +167,13 @@ func NewGetPrimeEntitlementsForbidden() *GetPrimeEntitlementsForbidden {
 }
 
 // WithPayload adds the payload to the get prime entitlements forbidden response
-func (o *GetPrimeEntitlementsForbidden) WithPayload(payload *ghcmessages.Error) *GetPrimeEntitlementsForbidden {
+func (o *GetPrimeEntitlementsForbidden) WithPayload(payload *primemessages.Error) *GetPrimeEntitlementsForbidden {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the get prime entitlements forbidden response
-func (o *GetPrimeEntitlementsForbidden) SetPayload(payload *ghcmessages.Error) {
+func (o *GetPrimeEntitlementsForbidden) SetPayload(payload *primemessages.Error) {
 	o.Payload = payload
 }
 
@@ -201,7 +201,7 @@ type GetPrimeEntitlementsNotFound struct {
 	/*
 	  In: Body
 	*/
-	Payload *ghcmessages.Error `json:"body,omitempty"`
+	Payload *primemessages.Error `json:"body,omitempty"`
 }
 
 // NewGetPrimeEntitlementsNotFound creates GetPrimeEntitlementsNotFound with default headers values
@@ -211,13 +211,13 @@ func NewGetPrimeEntitlementsNotFound() *GetPrimeEntitlementsNotFound {
 }
 
 // WithPayload adds the payload to the get prime entitlements not found response
-func (o *GetPrimeEntitlementsNotFound) WithPayload(payload *ghcmessages.Error) *GetPrimeEntitlementsNotFound {
+func (o *GetPrimeEntitlementsNotFound) WithPayload(payload *primemessages.Error) *GetPrimeEntitlementsNotFound {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the get prime entitlements not found response
-func (o *GetPrimeEntitlementsNotFound) SetPayload(payload *ghcmessages.Error) {
+func (o *GetPrimeEntitlementsNotFound) SetPayload(payload *primemessages.Error) {
 	o.Payload = payload
 }
 
@@ -245,7 +245,7 @@ type GetPrimeEntitlementsInternalServerError struct {
 	/*
 	  In: Body
 	*/
-	Payload *ghcmessages.Error `json:"body,omitempty"`
+	Payload *primemessages.Error `json:"body,omitempty"`
 }
 
 // NewGetPrimeEntitlementsInternalServerError creates GetPrimeEntitlementsInternalServerError with default headers values
@@ -255,13 +255,13 @@ func NewGetPrimeEntitlementsInternalServerError() *GetPrimeEntitlementsInternalS
 }
 
 // WithPayload adds the payload to the get prime entitlements internal server error response
-func (o *GetPrimeEntitlementsInternalServerError) WithPayload(payload *ghcmessages.Error) *GetPrimeEntitlementsInternalServerError {
+func (o *GetPrimeEntitlementsInternalServerError) WithPayload(payload *primemessages.Error) *GetPrimeEntitlementsInternalServerError {
 	o.Payload = payload
 	return o
 }
 
 // SetPayload sets the payload to the get prime entitlements internal server error response
-func (o *GetPrimeEntitlementsInternalServerError) SetPayload(payload *ghcmessages.Error) {
+func (o *GetPrimeEntitlementsInternalServerError) SetPayload(payload *primemessages.Error) {
 	o.Payload = payload
 }
 
