# pkg/handlers/primeapi/api.go
@@ -29,6 +29,13 @@ func NewPrimeAPIHandler(context handlers.HandlerContext) http.Handler {
 		context,
 		movetaskorder.NewMoveTaskOrderEstimatedWeightUpdater(context.DB()),
 	}
+	primeAPI.MoveTaskOrderGetPrimeEntitlementsHandler = GetPrimeEntitlementsHandler{context,
+		movetaskorder.NewMoveTaskOrderFetcher(context.DB()),
+	}
+	primeAPI.MoveTaskOrderUpdateMoveTaskOrderActualWeightHandler = UpdateMoveTaskOrderActualWeightHandler{
+		context,
+		movetaskorder.NewMoveTaskOrderActualWeightUpdater(context.DB()),
+	}
 
 	return primeAPI.Serve(nil)
 }
