# swagger/ghc.yaml
@@ -581,100 +581,6 @@ paths:
       description: Gets entitlements
       operationId: getEntitlements
       summary: Gets entitlements for a move order by ID
-  '/move-task-orders/{moveTaskOrderID}/prime-entitlements':
-    parameters:
-      - description: ID of move order to use
-        in: path
-        name: moveTaskOrderID
-        required: true
-        type: string
-    get:
-      produces:
-        - application/json
-      parameters: []
-      tags:
-        - Entitlements
-        - prime
-      responses:
-        '200':
-          description: Successfully retrieved move task order
-          schema:
-            $ref: '#/definitions/Entitlements'
-        '400':
-          description: The request payload is invalid
-          schema:
-            $ref: '#/definitions/Error'
-        '401':
-          description: The request was denied
-          schema:
-            $ref: '#/definitions/Error'
-        '403':
-          description: The request was denied
-          schema:
-            $ref: '#/definitions/Error'
-        '404':
-          description: The requested resource wasn't found
-          schema:
-            $ref: '#/definitions/Error'
-        '500':
-          description: A server error occurred
-          schema:
-            $ref: '#/definitions/Error'
-      description: Gets entitlements
-      operationId: getPrimeEntitlements
-      summary: Gets entitlements for a move order by ID
-  '/move-task-orders/{moveTaskOrderID}/prime-actual-weight':
-    parameters:
-      - description: ID of move order to use
-        in: path
-        name: moveTaskOrderID
-        required: true
-        type: string
-    patch:
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: body
-          name: body
-          required: true
-          schema:
-            type: object
-            properties:
-              actualWeight:
-                type: integer
-      responses:
-        '200':
-          description: Successfully retrieved move task order
-          schema:
-            $ref: '#/definitions/MoveTaskOrder'
-        '400':
-          description: The request payload is invalid
-          schema:
-            $ref: '#/responses/InvalidRequest'
-        '401':
-          description: The request was denied
-          schema:
-            $ref: '#/responses/PermissionDenied'
-        '403':
-          description: The request was denied
-          schema:
-            $ref: '#/responses/PermissionDenied'
-        '404':
-          description: The requested resource wasn't found
-          schema:
-            $ref: '#/responses/NotFound'
-        '500':
-          description: A server error occurred
-          schema:
-            $ref: '#/responses/ServerError'
-      tags:
-        - moveTaskOrder
-        - prime
-      description: Updates a move order's actual weight by ID
-      operationId: updateMoveTaskOrderActualWeight
-      summary: Updates a move order's actual weight by ID
   /payment-requests:
     get:
       produces:
@@ -1255,10 +1161,6 @@ definitions:
           - REJECTED
           - SUBMITTED
         type: string
-      actualWeight:
-        type: integer
-        example: 1000
-        x-formatting: weight
       updatedAt:
         format: date
         type: string
